2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm (query_selector): Implemented.

2007-09-29  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm ($get_elements_by_selectors): Created
	from most part of |query_selector_all|.

2007-09-24  Wakaba  <wakaba@suika.fam.cx>

	* DOMException.pm (SYNTAX_ERR): New subtype is defined.
	(UNDECLARED_PREFIX_ERR): New subtype is defined.

	* Document.pm (Document): Implements the |DocumentSelector|
	interface.

	* Element.pm (Element): Implements the |ElementSelector|
	interface.

	* Node.pm (Node): Implements the |NSResolver| interface.

	* SelectorsAPI.pm: Now (hopefully) conform to the Selectors
	API Editor's Draft (only |query_selector_all| on |Document|,
	with limited selectors syntax support, though).

2007-09-23  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: Namespaced type/universal selectors
	are supported.

2007-09-23  Wakaba  <wakaba@suika.fam.cx>

	* SelectorsAPI.pm: New Perl module.

2007-08-25  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm (manakai_language): Return the |manakai_language|
	of the |owner_document|, if any, as defined in the spec.

2007-08-25  Wakaba  <wakaba@suika.fam.cx>

	* Makefile: Relative path was wrong.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* HTML/: New directory.

	* Element.pm (create_element_ns): Return object implementing 
	the |HTMLElement| interface for HTML elements.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* DOMImplementation.pod: New documentation.

	* Makefile: Make HTML document.

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* XDoctype.dis, XDoctype.pm: Removed.

	* CharacterData.pm: Renamed from DOMCharacterData.pm.

	* Document.pm: Renamed from DOMDocument.pm.

	* Element.pm: Renamed from DOMElement.pm

2007-07-29  Wakaba  <wakaba@suika.fam.cx>

	* DOMString.dis, DOMString.pm, Document.dis, Document.pm,
	Element.dis, Element.pm, CharacterData.dis, CharacterData.pm,
	TreeCore.dis, TreeCore.pm, DOMCore.dis, DOMCore.pm,