@@ -29,10 +29,14 @@
 /2/1
 /2/2
 /2/2/1
+#result 1 /2/2
+/2/2/1
 #result 2
 /2
 /2/1
 /2/2
+/2/2/1
+#result 2 /2/2
 /2/2/1
 #result 3
 /2
@@ -40,11 +44,20 @@
 /2/2
 /2/2/1
 /2/2/2
+#result 3 /2/2
+/2/2/1
+/2/2/2
+#result 3 /2/2/1
 #result 4
 /2
 /2/1
 /2/2
 /2/2/1
+/2/2/1/1
+#result 4 /2/2
+/2/2/1
+/2/2/1/1
+#result 4 /2/2/1
 /2/2/1/1
 
 #data
@@ -158,6 +171,12 @@ s|p
 /2/2
 /2/2/1
 /2/2/1/1
+#result 4 /2/2
+/2/2/1
+/2/2/1/1
+#result 4 /2/2/1
+/2/2/1/1
+#result 4 /2/2/1/1
 
 #data
 * > *
@@ -165,13 +184,20 @@ s|p
 /2/1
 /2/2
 /2/2/1
+#result 1 /2/2
+/2/2/1
 #result 2
 /2/1
 /2/2
 /2/2/1
+#result 2 /2/2
+/2/2/1
 #result 3
 /2/1
 /2/2
+/2/2/1
+/2/2/2
+#result 3 /2/2
 /2/2/1
 /2/2/2
 #result 4
@@ -179,7 +205,12 @@ s|p
 /2/2
 /2/2/1
 /2/2/1/1
-
+#result 4 /2/2
+/2/2/1
+/2/2/1/1
+#result 4 /2/2/1
+/2/2/1/1
+#result 4 /2/2/1/1
 
 #data
 * + *
@@ -197,6 +228,10 @@ s|p
 /2/2/2
 /2/2/3
 /2/2/4
+#result 5 /2/2
+/2/2/2
+/2/2/3
+/2/2/4
 
 #data
 * ~ *
@@ -207,6 +242,9 @@ s|p
 #result 3
 /2/2
 /2/2/2
+#result 3 /2/2
+/2/2/2
+#result 3 /2/2/1
 #result 4
 /2/2
 #result 5
@@ -214,6 +252,12 @@ s|p
 /2/2/2
 /2/2/3
 /2/2/4
+#result 5 /2/2
+/2/2/2
+/2/2/3
+/2/2/4
+#result 5 /2/2/1
+#result 5 /2/2/2
 
 #data
 * + p
@@ -221,6 +265,9 @@ s|p
 #result 2
 #result 3
 /2/2/2
+#result 3 /2/2
+/2/2/2
+#result 3 /2/2/2
 #result 4
 #result 5
 /2/2/2
@@ -278,4 +325,52 @@ p, ::before
 ::before, p
 #result 1
 /2/2/1
+
+#data
+* * p
+#result 3 /2/2
+/2/2/1
+/2/2/2
+
+#data
+* > * p
+#result 3 /2/2
+/2/2/1
+/2/2/2
+
+#data
+* > * > p
+#result 3 /2/2
+/2/2/1
+/2/2/2
+
+#data
+* + * p
+#result 3 /2/2
+/2/2/1
+/2/2/2
+#result 3 /2/2/1
+
+#data
+* ~ * p
+#result 3 /2/2
+/2/2/1
+/2/2/2
+#result 3 /2/2/1
+
+#html 7
+<!DOCTYPE HTML>
+<p><a></a><p><b></b><p><i></i>
+
+#data
+p + p *
+#result 7 /2/2
+/2/2/2/1
+/2/2/3/1
+
+#data
+p ~ p *
+#result 7 /2/2
+/2/2/2/1
+/2/2/3/1
 
