@@ -1,5 +1,13 @@
 2007-09-29  Wakaba  <wakaba@suika.fam.cx>
 
+	* DOM-SelectorsAPI-1.t: Suport for testing of |ElementSelector|
+	methods.
+
+	* selectors-test-1.dat: New test data for |ElementSelector|
+	methods are added.
+
+2007-09-29  Wakaba  <wakaba@suika.fam.cx>
+
 	* DOM-SelectorsAPI-1.t: Test |query_selector| on |Document|
 	as well.
 
