@@ -1,5 +1,9 @@
 2007-09-29  Wakaba  <wakaba@suika.fam.cx>
 
+	* SelectorsAPI.pm (ElementSelector): Implemented.
+
+2007-09-29  Wakaba  <wakaba@suika.fam.cx>
+
 	* SelectorsAPI.pm (query_selector): Implemented.
 
 2007-09-29  Wakaba  <wakaba@suika.fam.cx>
